--- a/healing.html
+++ b/healing.html
@@ -22,21 +22,21 @@
   <header>
     <div class="site-title">
       <a href="index.html">Martín Zamorano</a>
-      <span class="subtitle">KOMPONIST &amp; PIANIST</span>
+      <span class="subtitle" data-i18n="site.subtitle">KOMPONIST &amp; PIANIST</span>
     </div>
     <nav class="main-nav">
       <ul>
-        <li><a href="vita.html">VITA</a></li>
-        <li><a href="musik.html">PIANO</a></li>
-        <li><a href="improvisation.html">IMPROVISATION</a></li>
-        <li><a href="healing.html">The Healing Project</a></li>
-        <li><a href="zamoranoandstamer.html">Zamorano&amp;Stamer</a></li>
-        <li><a href="musiktheorie.html">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
-        <li><a href="transcriptions.html">Jazz Transcriptions</a></li>
-        <li><a href="mental-pocus-records.html">Mental Pocus Records</a></li>
-        <li><a href="labyrinth.html">Help me get to the Show</a></li>
-        <li><a href="slap.html">Slap-O-Mat</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="vita.html" data-i18n="nav.vita">VITA</a></li>
+        <li><a href="musik.html" data-i18n="nav.piano">PIANO</a></li>
+        <li><a href="improvisation.html" data-i18n="nav.improvisation">IMPROVISATION</a></li>
+        <li><a href="healing.html" data-i18n="nav.healing">The Healing Project</a></li>
+        <li><a href="zamoranoandstamer.html" data-i18n="nav.zamorano">Zamorano&amp;Stamer</a></li>
+        <li><a href="musiktheorie.html" data-i18n="nav.musiktheorie">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
+        <li><a href="transcriptions.html" data-i18n="nav.transcriptions">Jazz Transcriptions</a></li>
+        <li><a href="mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
+        <li><a href="labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
+        <li><a href="slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
+        <li><a href="kontakt.html" data-i18n="nav.kontakt">Kontakt</a></li>
       </ul>
     </nav>
     <div class="lang-switcher">
@@ -47,7 +47,7 @@
   </header>
 
   <main class="page-content">
-    <p>Diese fünf Bilder sind der grafische Teil des interdisziplinären Kunstwerks „Five Stages of Healing" zum Thema „Emotionales Heilen". Ausgangspunkt ist die Auseinandersetzung mit den fünf Phasen der Trauer nach dem Modell von Elisabeth Kübler-Ross und die künstlerische Übertragung dieser psychologischen Theorie auf den Prozess des Liebeskummers. Daraus entsteht ein innerer künstlerischer Dialog, der Dichtung, Malerei und Musik miteinander verbindet. Die fünf Bilder, die aus dem emotionalen Prozess hervorgehen und als emotionales Material für die musikalische Improvisation dienen, spiegeln die chaotische und zyklische Natur des Heilens wider und schildern zugleich die wesentlichen Aspekte jeder Phase des Prozesses. Sie laden sowohl die mitwirkenden Musiker:innen als auch das Publikum dazu ein, eigene Erfahrungen von Verlust und Akzeptanz zu reflektieren.</p>
+    <p data-i18n="healing.intro">Diese fünf Bilder sind der grafische Teil des interdisziplinären Kunstwerks „Five Stages of Healing" zum Thema „Emotionales Heilen". Ausgangspunkt ist die Auseinandersetzung mit den fünf Phasen der Trauer nach dem Modell von Elisabeth Kübler-Ross und die künstlerische Übertragung dieser psychologischen Theorie auf den Prozess des Liebeskummers. Daraus entsteht ein innerer künstlerischer Dialog, der Dichtung, Malerei und Musik miteinander verbindet. Die fünf Bilder, die aus dem emotionalen Prozess hervorgehen und als emotionales Material für die musikalische Improvisation dienen, spiegeln die chaotische und zyklische Natur des Heilens wider und schildern zugleich die wesentlichen Aspekte jeder Phase des Prozesses. Sie laden sowohl die mitwirkenden Musiker:innen als auch das Publikum dazu ein, eigene Erfahrungen von Verlust und Akzeptanz zu reflektieren.</p>
 
     <div class="file-links">
       <a href="https://www.martinzamorano.com/system/files/30263/original/Fast_Mix_Liebeshummer_II.wav" target="_blank">Audio: Fast Mix Liebeshummer II (WAV)</a>
@@ -80,22 +80,22 @@
       <img src="assets/images/5._Selbstwirksamkeit_-_It-s_OK__shadow.png" alt="5. Selbstwirksamkeit — It's ok, shadow" />
     </div>
 
-    <h2>Gedichte</h2>
+    <h2 data-i18n="healing.poems.h2">Gedichte</h2>
     <div class="file-links">
       <a href="https://www.martinzamorano.com/system/files/30069/original/2025_F%C3%9CNF_LIEBESHUMMER_%E2%80%93_gefiltert.pdf" target="_blank">Fünf LiebesHUMMER (PDF)</a>
       <a href="https://www.martinzamorano.com/system/files/30070/original/LOVE_INFLUENZA.pdf" target="_blank">LOVE influenza (PDF)</a>
       <a href="https://www.martinzamorano.com/system/files/30071/original/Honigg_Las.pdf" target="_blank">Honigg Las (PDF)</a>
     </div>
 
-    <h2>Five Stages of Healing</h2>
-    <p>Vor einigen Jahren machte mich Volkhardt Preuß bei einem seiner berühmten Seminare – in diesem Fall über Monteverdis Orfeo – mit den fünf Phasen der Verkündigung Marias bekannt. Besonders interessant war, wie die Maler und Denker der Renaissance diese fünf theologischen Kapitel als Grundlage nutzten, um sich mit grundsätzlichen menschlichen Gemütszuständen auseinanderzusetzen und den Umgang mit dem Unerwarteten künstlerisch zu schildern. Dies wird auf bemerkenswerte Weise in Michael Baxandalls Buch "Die Wirklichkeit der Bilder – Malerei und Erfahrung im Italien der Renaissance" beschrieben.</p>
-    <p>Schon damals wurde mir die inhaltliche Nähe der Marienverkündigung zu den fünf Phasen der Trauer bewusst, doch zu diesem Zeitpunkt kannte ich dieses Modell nur als Klischee innerhalb der Popkultur. Ein besonderes Beispiel hierfür ist Trevor, der gewalttätige, grausame und zugleich faszinierende Charakter des Videospiels GTA 5. Er erwähnt "Denial" als "the first stage of the grieving process", als er einer feindlichen Biker-Gang mitteilt, dass er eines ihrer Mitglieder brutal ermordet hat.</p>
-    <p>Viele Jahre später – im Zusammenhang mit dem enttäuschenden und überraschenden Ende einer kurzen, aber intensiven Liebesbeziehung – erinnerte ich mich an dieses fünfteilige Modell. Ich entschied mich, den Prozess meines Liebeskummers analytisch zu begleiten, um möglicherweise einige Erkenntnisse über diese psychologische Reise zu gewinnen, die mir im Leben einige Male so viel Energie, Schmerz und Arbeit abverlangt hat. Innerhalb kurzer Zeit kristallisierte sich aus den Gedanken und Empfindungen, die ich erlebte und notierte, ebenfalls eine fünfteilige Konstellation innerer Gemütszustände und Gedankenwelten heraus. Diese ließ sich, mit einigen Anpassungen, erstaunlich gut mit den fünf Phasen der Trauer vereinen.</p>
-    <p>Ich bin überzeugt, dass Kunst oft ein Medium – ein weiteres Spielfeld – ist, um den Prozess des Lebens und die Beschaffenheit des Existierens parallel zum Leben selbst auf ästhetische Weise zu erfahren. In der Kunst können wir das bereits innerlich Erlebte aus anderen Perspektiven – oft durch andere Menschen, denn Kunst ist grundsätzlich ein kollektives Phänomen – erneut erleben. Zugleich bietet Kunst ein Portal zu Gefühlswelten und Erfahrungen, die wir in der Realität nie machen werden – aber was heißt schon Realität? Im besten Fall führt dieser Prozess des (Wieder-)Erlebens zu einer Erkenntnis über die Existenz selbst. Diese Erkenntnis muss nicht unbedingt rational sein, sondern kann als spirituelles Wasser für den Geist "Fried und Freud" bringen. Deshalb glaube ich, dass Kunst zutiefst therapeutisch sein kann – sowohl für die Ausübenden als auch im besten Fall für die Rezipient:innen.</p>
-    <p>Der Schritt von der Analyse meiner eigenen Empfindungen und Gedanken während des Liebeskummers hin zu einer künstlerischen Tätigkeit war daher nicht groß. Schon während des Prozesses des Aufschreibens verfasste ich kleine Gedichte oder sammelte Gefühlsbilder – etwa, als ich beim Wäschehängen bemerkte, wie eine Erinnerung mich wie ein Stich in tiefe Frustration versetzte. Oder als ich beim Öffnen des leeren Briefkastens – zugegeben mit gekränktem Stolz – feststellen musste, dass in mir immer noch die Hoffnung lebte, dass alles doch noch gut werden könnte.</p>
-    <p>So entstanden diese fünf Bilder, die den Prozess des Heilens in Bezug auf Liebeskummer darstellen und begleiten. Ich verstehe sie nicht als Kunstwerke im Sinne eines Gemäldes, da ich über kein malerisches Handwerk verfüge, sondern als eine Art grafische Notation oder Grundlage für Musik – als Prompt für Improvisation.</p>
-    <p>Diesen Liebeskummer habe ich nicht nur als emotionale Reise erlebt, sondern auch durch das Analysieren und Festhalten von Empfindungen und Gedanken. Vor allem aber durch das Malen, Dichten und Improvisieren in Verbindung mit dem Modell der fünf Phasen der Trauer. Nachdem ich mich intensiver mit der psychologischen Theorie der ursprünglichen Verfasserin Elisabeth Kübler-Ross auseinandergesetzt habe, wurde mir klar, dass dieser Prozess kein zeitlich linearer ist – wie es oft durch die Darstellung der fünf Phasen als Kurve suggeriert wird. Stattdessen handelt es sich um ein zutiefst chaotisches Phänomen. Die Phasen, mit ihren unterschiedlichen charaktergebenden Elementen, vermischen sich zeitlich, finden gleichzeitig statt, greifen auf frühere Phasen zurück und führen jedes Mal zu unterschiedlichen inneren Gemütszuständen und Erkenntnissen.</p>
-    <p>Im Kleinen ist das Heilen ein sich ständig wiederholender Zyklus. Und doch gibt es auf großer Ebene einen Prozess, der im besten Fall zu einem never-ending Zustand der Akzeptanz führt. Aus dieser Akzeptanz entspringt die Selbstwirksamkeit – jene menschliche Fähigkeit, auf die eigenen inneren Ressourcen und Kompetenzen zu vertrauen, um jede traumatische Erfahrung überwinden zu können.</p>
+    <h2 data-i18n="healing.essay.h2">Five Stages of Healing</h2>
+    <p data-i18n="healing.essay.p1">Vor einigen Jahren machte mich Volkhardt Preuß bei einem seiner berühmten Seminare – in diesem Fall über Monteverdis Orfeo – mit den fünf Phasen der Verkündigung Marias bekannt. Besonders interessant war, wie die Maler und Denker der Renaissance diese fünf theologischen Kapitel als Grundlage nutzten, um sich mit grundsätzlichen menschlichen Gemütszuständen auseinanderzusetzen und den Umgang mit dem Unerwarteten künstlerisch zu schildern. Dies wird auf bemerkenswerte Weise in Michael Baxandalls Buch "Die Wirklichkeit der Bilder – Malerei und Erfahrung im Italien der Renaissance" beschrieben.</p>
+    <p data-i18n="healing.essay.p2">Schon damals wurde mir die inhaltliche Nähe der Marienverkündigung zu den fünf Phasen der Trauer bewusst, doch zu diesem Zeitpunkt kannte ich dieses Modell nur als Klischee innerhalb der Popkultur. Ein besonderes Beispiel hierfür ist Trevor, der gewalttätige, grausame und zugleich faszinierende Charakter des Videospiels GTA 5. Er erwähnt "Denial" als "the first stage of the grieving process", als er einer feindlichen Biker-Gang mitteilt, dass er eines ihrer Mitglieder brutal ermordet hat.</p>
+    <p data-i18n="healing.essay.p3">Viele Jahre später – im Zusammenhang mit dem enttäuschenden und überraschenden Ende einer kurzen, aber intensiven Liebesbeziehung – erinnerte ich mich an dieses fünfteilige Modell. Ich entschied mich, den Prozess meines Liebeskummers analytisch zu begleiten, um möglicherweise einige Erkenntnisse über diese psychologische Reise zu gewinnen, die mir im Leben einige Male so viel Energie, Schmerz und Arbeit abverlangt hat. Innerhalb kurzer Zeit kristallisierte sich aus den Gedanken und Empfindungen, die ich erlebte und notierte, ebenfalls eine fünfteilige Konstellation innerer Gemütszustände und Gedankenwelten heraus. Diese ließ sich, mit einigen Anpassungen, erstaunlich gut mit den fünf Phasen der Trauer vereinen.</p>
+    <p data-i18n="healing.essay.p4">Ich bin überzeugt, dass Kunst oft ein Medium – ein weiteres Spielfeld – ist, um den Prozess des Lebens und die Beschaffenheit des Existierens parallel zum Leben selbst auf ästhetische Weise zu erfahren. In der Kunst können wir das bereits innerlich Erlebte aus anderen Perspektiven – oft durch andere Menschen, denn Kunst ist grundsätzlich ein kollektives Phänomen – erneut erleben. Zugleich bietet Kunst ein Portal zu Gefühlswelten und Erfahrungen, die wir in der Realität nie machen werden – aber was heißt schon Realität? Im besten Fall führt dieser Prozess des (Wieder-)Erlebens zu einer Erkenntnis über die Existenz selbst. Diese Erkenntnis muss nicht unbedingt rational sein, sondern kann als spirituelles Wasser für den Geist "Fried und Freud" bringen. Deshalb glaube ich, dass Kunst zutiefst therapeutisch sein kann – sowohl für die Ausübenden als auch im besten Fall für die Rezipient:innen.</p>
+    <p data-i18n="healing.essay.p5">Der Schritt von der Analyse meiner eigenen Empfindungen und Gedanken während des Liebeskummers hin zu einer künstlerischen Tätigkeit war daher nicht groß. Schon während des Prozesses des Aufschreibens verfasste ich kleine Gedichte oder sammelte Gefühlsbilder – etwa, als ich beim Wäschehängen bemerkte, wie eine Erinnerung mich wie ein Stich in tiefe Frustration versetzte. Oder als ich beim Öffnen des leeren Briefkastens – zugegeben mit gekränktem Stolz – feststellen musste, dass in mir immer noch die Hoffnung lebte, dass alles doch noch gut werden könnte.</p>
+    <p data-i18n="healing.essay.p6">So entstanden diese fünf Bilder, die den Prozess des Heilens in Bezug auf Liebeskummer darstellen und begleiten. Ich verstehe sie nicht als Kunstwerke im Sinne eines Gemäldes, da ich über kein malerisches Handwerk verfüge, sondern als eine Art grafische Notation oder Grundlage für Musik – als Prompt für Improvisation.</p>
+    <p data-i18n="healing.essay.p7">Diesen Liebeskummer habe ich nicht nur als emotionale Reise erlebt, sondern auch durch das Analysieren und Festhalten von Empfindungen und Gedanken. Vor allem aber durch das Malen, Dichten und Improvisieren in Verbindung mit dem Modell der fünf Phasen der Trauer. Nachdem ich mich intensiver mit der psychologischen Theorie der ursprünglichen Verfasserin Elisabeth Kübler-Ross auseinandergesetzt habe, wurde mir klar, dass dieser Prozess kein zeitlich linearer ist – wie es oft durch die Darstellung der fünf Phasen als Kurve suggeriert wird. Stattdessen handelt es sich um ein zutiefst chaotisches Phänomen. Die Phasen, mit ihren unterschiedlichen charaktergebenden Elementen, vermischen sich zeitlich, finden gleichzeitig statt, greifen auf frühere Phasen zurück und führen jedes Mal zu unterschiedlichen inneren Gemütszuständen und Erkenntnissen.</p>
+    <p data-i18n="healing.essay.p8">Im Kleinen ist das Heilen ein sich ständig wiederholender Zyklus. Und doch gibt es auf großer Ebene einen Prozess, der im besten Fall zu einem never-ending Zustand der Akzeptanz führt. Aus dieser Akzeptanz entspringt die Selbstwirksamkeit – jene menschliche Fähigkeit, auf die eigenen inneren Ressourcen und Kompetenzen zu vertrauen, um jede traumatische Erfahrung überwinden zu können.</p>
   </main>
 
   <footer>
@@ -103,8 +103,11 @@
       <a href="impressum.html">Impressum</a>
       <a href="datenschutz.html">Datenschutz</a>
     </nav>
-    <p class="footer-copy">&copy; 2025 Martín Zamorano</p>
+    <p class="footer-copy" data-i18n="site.footer.copy">&copy; 2025 Martín Zamorano</p>
   </footer>
+  <script src="assets/i18n/de.js"></script>
+  <script src="assets/i18n/en.js"></script>
+  <script src="assets/i18n/es.js"></script>
   <script src="assets/nav.js"></script>
 </body>
 </html>
