--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Martín Zamorano</title>
-  <meta name="description" content="Pianist, Composer &amp; Music Educator — Hamburg" />
+  <meta name="description" content="Pianist, Komponist & Musikpädagoge — Hamburg" />
   <link rel="stylesheet" href="../assets/style.css" />
   <style>
     body {
@@ -22,22 +22,22 @@
 <body>
   <header>
     <div class="site-title">
-      <a href="../index.html">Martín Zamorano</a>
-      <span class="subtitle">COMPOSER &amp; PIANIST</span>
+      <a href="index.html">Martín Zamorano</a>
+      <span class="subtitle" data-i18n="site.subtitle">KOMPONIST &amp; PIANIST</span>
     </div>
     <nav class="main-nav">
       <ul>
-        <li><a href="vita.html">BIOGRAPHY</a></li>
-        <li><a href="../musik.html">PIANO</a></li>
-        <li><a href="improvisation.html">IMPROVISATION</a></li>
-        <li><a href="healing.html">The Healing Project</a></li>
-        <li><a href="../zamoranoandstamer.html">Zamorano&amp;Stamer</a></li>
-        <li><a href="../musiktheorie.html">COUNTERPOINT &amp; MUSIC THEORY</a></li>
-        <li><a href="../transcriptions.html">Jazz Transcriptions</a></li>
-        <li><a href="../mental-pocus-records.html">Mental Pocus Records</a></li>
-        <li><a href="../labyrinth.html">Help me get to the Show</a></li>
-        <li><a href="../slap.html">Slap-O-Mat</a></li>
-        <li><a href="../kontakt.html">Contact</a></li>
+        <li><a href="vita.html" data-i18n="nav.vita">VITA</a></li>
+        <li><a href="../musik.html" data-i18n="nav.piano">PIANO</a></li>
+        <li><a href="improvisation.html" data-i18n="nav.improvisation">IMPROVISATION</a></li>
+        <li><a href="healing.html" data-i18n="nav.healing">The Healing Project</a></li>
+        <li><a href="../zamoranoandstamer.html" data-i18n="nav.zamorano">Zamorano&amp;Stamer</a></li>
+        <li><a href="../musiktheorie.html" data-i18n="nav.musiktheorie">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
+        <li><a href="../transcriptions.html" data-i18n="nav.transcriptions">Jazz Transcriptions</a></li>
+        <li><a href="../mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
+        <li><a href="../labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
+        <li><a href="../slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
+        <li><a href="../kontakt.html" data-i18n="nav.kontakt">Kontakt</a></li>
       </ul>
     </nav>
     <div class="lang-switcher">
@@ -49,9 +49,9 @@
 
   <main class="page-content">
     <div class="home-hero">
-      <h1>Moin, moin!</h1>
-      <p class="tagline">Composer &amp; Pianist — Hamburg</p>
-      <p>Welcome to Martín Zamorano's homepage</p>
+      <h1 data-i18n="home.h1">Moin, moin!</h1>
+      <p class="tagline" data-i18n="home.tagline">Komponist &amp; Pianist — Hamburg</p>
+      <p data-i18n="home.welcome">Willkommen auf der Homepage von Martín Zamorano</p>
       <div class="home-links">
         <a href="https://martinzamorano.bandcamp.com/" target="_blank" rel="noopener">Bandcamp</a>
         <a href="https://www.instagram.com/martinzamoranomusic/" target="_blank" rel="noopener">Instagram</a>
@@ -65,8 +65,11 @@
       <a href="../impressum.html">Impressum</a>
       <a href="../datenschutz.html">Datenschutz</a>
     </nav>
-    <p class="footer-copy">&copy; 2025 Martín Zamorano</p>
+    <p class="footer-copy" data-i18n="site.footer.copy">&copy; 2025 Martín Zamorano</p>
   </footer>
+  <script src="../assets/i18n/de.js"></script>
+  <script src="../assets/i18n/en.js"></script>
+  <script src="../assets/i18n/es.js"></script>
   <script src="../assets/nav.js"></script>
 </body>
 </html>
