--- a/kontakt.html
+++ b/kontakt.html
@@ -11,21 +11,21 @@
   <header>
     <div class="site-title">
       <a href="index.html">Martín Zamorano</a>
-      <span class="subtitle">KOMPONIST &amp; PIANIST</span>
+      <span class="subtitle" data-i18n="site.subtitle">KOMPONIST &amp; PIANIST</span>
     </div>
     <nav class="main-nav">
       <ul>
-        <li><a href="vita.html">VITA</a></li>
-        <li><a href="musik.html">PIANO</a></li>
-        <li><a href="improvisation.html">IMPROVISATION</a></li>
-        <li><a href="healing.html">The Healing Project</a></li>
-        <li><a href="zamoranoandstamer.html">Zamorano&amp;Stamer</a></li>
-        <li><a href="musiktheorie.html">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
-        <li><a href="transcriptions.html">Jazz Transcriptions</a></li>
-        <li><a href="mental-pocus-records.html">Mental Pocus Records</a></li>
-        <li><a href="labyrinth.html">Help me get to the Show</a></li>
-        <li><a href="slap.html">Slap-O-Mat</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="vita.html" data-i18n="nav.vita">VITA</a></li>
+        <li><a href="musik.html" data-i18n="nav.piano">PIANO</a></li>
+        <li><a href="improvisation.html" data-i18n="nav.improvisation">IMPROVISATION</a></li>
+        <li><a href="healing.html" data-i18n="nav.healing">The Healing Project</a></li>
+        <li><a href="zamoranoandstamer.html" data-i18n="nav.zamorano">Zamorano&amp;Stamer</a></li>
+        <li><a href="musiktheorie.html" data-i18n="nav.musiktheorie">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
+        <li><a href="transcriptions.html" data-i18n="nav.transcriptions">Jazz Transcriptions</a></li>
+        <li><a href="mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
+        <li><a href="labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
+        <li><a href="slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
+        <li><a href="kontakt.html" data-i18n="nav.kontakt">Kontakt</a></li>
       </ul>
     </nav>
     <div class="lang-switcher">
@@ -38,8 +38,8 @@
   <!-- Bodyguard Overlay -->
   <div id="bodyguardOverlay" class="bodyguard-overlay">
     <div class="bodyguard-container">
-      <h2>Um Martin zu sprechen, müssen Sie erst an uns vorbeikommen!</h2>
-      <p class="bodyguard-instructions">Slap them away to continue!</p>
+      <h2 data-i18n="kontakt.bodyguard.title">Um Martin zu sprechen, müssen Sie erst an uns vorbeikommen!</h2>
+      <p class="bodyguard-instructions" data-i18n="kontakt.bodyguard.instructions">Slap them away to continue!</p>
       <div class="bodyguards">
         <div class="bodyguard-box" id="hendrikBox">
           <h3>Hendrik</h3>
@@ -60,30 +60,30 @@
   </div>
 
   <main class="page-content">
-    <h2>Kontakt</h2>
-    <p>Si quieres contactarme mándame un email, rellenando el formulario de abajo.</p>
+    <h2 data-i18n="kontakt.h2">Kontakt</h2>
+    <p data-i18n="kontakt.intro">Si quieres contactarme mándame un email, rellenando el formulario de abajo.</p>
 
     <form class="contact-form" action="https://formspree.io/f/placeholder" method="POST">
       <label>
-        Ihr Name *
+        <span data-i18n="kontakt.form.name">Ihr Name</span> *
         <input type="text" name="name" required />
       </label>
       <label>
-        Telefon
+        <span data-i18n="kontakt.form.phone">Telefon</span>
         <input type="tel" name="telefon" />
       </label>
       <label>
-        Email *
+        <span data-i18n="kontakt.form.email">Email</span> *
         <input type="email" name="email" required />
       </label>
       <label>
-        Ihre Nachricht *
+        <span data-i18n="kontakt.form.message">Ihre Nachricht</span> *
         <textarea name="message" required></textarea>
       </label>
       <label style="display:none;">
         <input type="text" name="_gotcha" tabindex="-1" autocomplete="off" />
       </label>
-      <button type="submit">Absenden</button>
+      <button type="submit" data-i18n="kontakt.form.submit">Absenden</button>
     </form>
   </main>
 
@@ -92,8 +92,11 @@
       <a href="impressum.html">Impressum</a>
       <a href="datenschutz.html">Datenschutz</a>
     </nav>
-    <p class="footer-copy">&copy; 2025 Martín Zamorano</p>
+    <p class="footer-copy" data-i18n="site.footer.copy">&copy; 2025 Martín Zamorano</p>
   </footer>
+  <script src="assets/i18n/de.js"></script>
+  <script src="assets/i18n/en.js"></script>
+  <script src="assets/i18n/es.js"></script>
   <script src="assets/nav.js"></script>
   <script src="bodyguard-script.js"></script>
 </body>
