--- a/musiktheorie.html
+++ b/musiktheorie.html
@@ -22,21 +22,21 @@
   <header>
     <div class="site-title">
       <a href="index.html">Martín Zamorano</a>
-      <span class="subtitle">KOMPONIST &amp; PIANIST</span>
+      <span class="subtitle" data-i18n="site.subtitle">KOMPONIST &amp; PIANIST</span>
     </div>
     <nav class="main-nav">
       <ul>
-        <li><a href="vita.html">VITA</a></li>
-        <li><a href="musik.html">PIANO</a></li>
-        <li><a href="improvisation.html">IMPROVISATION</a></li>
-        <li><a href="healing.html">The Healing Project</a></li>
-        <li><a href="zamoranoandstamer.html">Zamorano&amp;Stamer</a></li>
-        <li><a href="musiktheorie.html">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
-        <li><a href="transcriptions.html">Jazz Transcriptions</a></li>
-        <li><a href="mental-pocus-records.html">Mental Pocus Records</a></li>
-        <li><a href="labyrinth.html">Help me get to the Show</a></li>
-        <li><a href="slap.html">Slap-O-Mat</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="vita.html" data-i18n="nav.vita">VITA</a></li>
+        <li><a href="musik.html" data-i18n="nav.piano">PIANO</a></li>
+        <li><a href="improvisation.html" data-i18n="nav.improvisation">IMPROVISATION</a></li>
+        <li><a href="healing.html" data-i18n="nav.healing">The Healing Project</a></li>
+        <li><a href="zamoranoandstamer.html" data-i18n="nav.zamorano">Zamorano&amp;Stamer</a></li>
+        <li><a href="musiktheorie.html" data-i18n="nav.musiktheorie">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
+        <li><a href="transcriptions.html" data-i18n="nav.transcriptions">Jazz Transcriptions</a></li>
+        <li><a href="mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
+        <li><a href="labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
+        <li><a href="slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
+        <li><a href="kontakt.html" data-i18n="nav.kontakt">Kontakt</a></li>
       </ul>
     </nav>
     <div class="lang-switcher">
@@ -47,35 +47,13 @@
   </header>
 
   <main class="page-content">
-    <h2>Improvisation als ornamentale Schicht über einem harmonischen Gerüst: Parallelen zwischen der Alten Musik und Jazz (2025)</h2>
-    <p><em>Masterarbeit (Dr. Langner Jazzmaster 2022–2025)</em></p>
-    <div class="file-links">
-      <a href="https://www.martinzamorano.com/system/files/29912/original/FINAL_Flesh_and_Bones_(Masterarbeit)_Martin_Zamorano_-_Dr._Langner_Jazzmaster_2022-2025.pdf" target="_blank">Flesh &amp; Bones — Masterarbeit (PDF)</a>
-    </div>
+    <p data-i18n="musiktheorie.p1">Musiktheorie und Kontrapunkt sind für mich keine trockenen Regeln, sondern lebendige Werkzeuge, um Musik tiefer zu verstehen und zu gestalten. Seit 2021 lehre ich an der Hochschule für Musik Lübeck, seit 2023 an der Staatlichen Jugendmusikschule Hamburg.</p>
+    <p data-i18n="musiktheorie.p2">Ich biete auch Einzelunterricht in Musiktheorie, Kontrapunkt und Gehörbildung an – für alle Niveaus, von Anfängern bis zu fortgeschrittenen Studierenden.</p>
+    <p data-i18n="musiktheorie.p3">Wenn du Interesse an einem Unterrichtsgespräch hast, <a href="kontakt.html">melde dich gern bei mir</a>.</p>
 
-    <h2>Suite in Baroque Style Over the Jazz Standard "Alone Together"</h2>
+    <h2 data-i18n="musiktheorie.resources.h2">Lernmaterialien</h2>
     <div class="file-links">
-      <a href="https://www.martinzamorano.com/system/files/29459/original/Alone_Together_Suite_-_Partitur.pdf" target="_blank">Suite "Alone Together" — Partitur (PDF)</a>
-    </div>
-
-    <h2>Negative Harmony, Verbindungen zwischen Jazztheorie und klassischer Musiktheorie (2022)</h2>
-    <div class="file-links">
-      <a href="https://www.martinzamorano.com/system/files/28548/original/Masterarbeit_-_Martin_G._Zamorano_(26.3.2022).pdf" target="_blank">Negative Harmony — Masterarbeit (PDF)</a>
-    </div>
-
-    <h2>Concerto Grosso im Stile von Muffat</h2>
-    <p><em>Gespielt vom Ensemble Kairos</em></p>
-    <div class="file-links">
-      <a href="https://www.martinzamorano.com/system/files/20651/original/Partitura_completa_-_K%C3%B6ln_Projekt_(KORRIGIERT_UND_FERTIG)_-_Kleines_Concerto_Grosso_(15.2.20).pdf" target="_blank">Partitur Concerto Grosso (PDF)</a>
-    </div>
-
-    <h2>Verschiedene stilgetreue Kompositionen und Kontrapunktarbeiten</h2>
-    <div class="file-links">
-      <a href="https://www.martinzamorano.com/system/files/20652/original/Pr%C3%A4ludium_und_fuge_%C3%9Cbung_-_Partitura_completa.pdf" target="_blank">Präludium und Fuge in C (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/20653/original/Fugen%C3%BCbung_%C3%BCber_das_erste_Thema_der_Kunst_der_Fuge_-_Partitura_completa.pdf" target="_blank">Fuge über das Thema der Kunst der Fuge (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/20656/original/1._Satz_Schema_Sonata_(August).pdf" target="_blank">Sonata in klassischem Stil — 1. Satz (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/20654/original/2._Satz_-_Andante_(August).pdf" target="_blank">Sonata in klassischem Stil — 2. Satz (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/20655/original/3._Satz_-_Scherzo_(August).pdf" target="_blank">Sonata in klassischem Stil — 3. Satz (PDF)</a>
+      <a href="assets/files/Kontrapunkt_Skript.pdf" target="_blank" data-i18n="musiktheorie.pdf1">Kontrapunkt-Skript (PDF)</a>
     </div>
   </main>
 
@@ -84,8 +62,11 @@
       <a href="impressum.html">Impressum</a>
       <a href="datenschutz.html">Datenschutz</a>
     </nav>
-    <p class="footer-copy">&copy; 2025 Martín Zamorano</p>
+    <p class="footer-copy" data-i18n="site.footer.copy">&copy; 2025 Martín Zamorano</p>
   </footer>
+  <script src="assets/i18n/de.js"></script>
+  <script src="assets/i18n/en.js"></script>
+  <script src="assets/i18n/es.js"></script>
   <script src="assets/nav.js"></script>
 </body>
 </html>
