--- a/vita.html
+++ b/vita.html
@@ -22,21 +22,21 @@
   <header>
     <div class="site-title">
       <a href="index.html">Martín Zamorano</a>
-      <span class="subtitle">KOMPONIST &amp; PIANIST</span>
+      <span class="subtitle" data-i18n="site.subtitle">KOMPONIST &amp; PIANIST</span>
     </div>
     <nav class="main-nav">
       <ul>
-        <li><a href="vita.html">VITA</a></li>
-        <li><a href="musik.html">PIANO</a></li>
-        <li><a href="improvisation.html">IMPROVISATION</a></li>
-        <li><a href="healing.html">The Healing Project</a></li>
-        <li><a href="zamoranoandstamer.html">Zamorano&amp;Stamer</a></li>
-        <li><a href="musiktheorie.html">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
-        <li><a href="transcriptions.html">Jazz Transcriptions</a></li>
-        <li><a href="mental-pocus-records.html">Mental Pocus Records</a></li>
-        <li><a href="labyrinth.html">Help me get to the Show</a></li>
-        <li><a href="slap.html">Slap-O-Mat</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="vita.html" data-i18n="nav.vita">VITA</a></li>
+        <li><a href="musik.html" data-i18n="nav.piano">PIANO</a></li>
+        <li><a href="improvisation.html" data-i18n="nav.improvisation">IMPROVISATION</a></li>
+        <li><a href="healing.html" data-i18n="nav.healing">The Healing Project</a></li>
+        <li><a href="zamoranoandstamer.html" data-i18n="nav.zamorano">Zamorano&amp;Stamer</a></li>
+        <li><a href="musiktheorie.html" data-i18n="nav.musiktheorie">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
+        <li><a href="transcriptions.html" data-i18n="nav.transcriptions">Jazz Transcriptions</a></li>
+        <li><a href="mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
+        <li><a href="labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
+        <li><a href="slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
+        <li><a href="kontakt.html" data-i18n="nav.kontakt">Kontakt</a></li>
       </ul>
     </nav>
     <div class="lang-switcher">
@@ -50,15 +50,15 @@
     <img src="assets/images/464905209_9404329619594615_2878854906070236741_n.jpg"
          alt="Foto: Nils Jöhnk" class="portrait" />
 
-    <p>Stellen Sie sich vor, Thom Yorke, der Frontmann von Radiohead, hätte Klavierunterricht bei Bach und Brad Mehldau genommen und würde dann über Minimal Music mit Pharoah Sanders improvisieren – das ist eine der vielen Möglichkeiten, wie man die Musik von Martín Zamorano beschreiben könnte.</p>
+    <p data-i18n="vita.intro">Stellen Sie sich vor, Thom Yorke, der Frontmann von Radiohead, hätte Klavierunterricht bei Bach und Brad Mehldau genommen und würde dann über Minimal Music mit Pharoah Sanders improvisieren – das ist eine der vielen Möglichkeiten, wie man die Musik von Martín Zamorano beschreiben könnte.</p>
 
-    <p><strong>Martín Zamorano</strong> (*1995, Madrid) ist ein in Hamburg lebender Pianist, Komponist und Musikpädagoge. Seine klangliche Identität ist geprägt von einem genreübergreifenden Ansatz, der seine klassischen Wurzeln mit Jazztradition, Popkultur, Folk und freier Improvisation verbindet. In seiner Musik verschmelzen Mehrstimmigkeit, Groove und melancholischer Melodik zu einer eigenständigen musikalischen Sprache – stets auf der Suche nach emotionaler Tiefe und künstlerischer Integrität.</p>
+    <p data-i18n="vita.p1"><strong>Martín Zamorano</strong> (*1995, Madrid) ist ein in Hamburg lebender Pianist, Komponist und Musikpädagoge. Seine klangliche Identität ist geprägt von einem genreübergreifenden Ansatz, der seine klassischen Wurzeln mit Jazztradition, Popkultur, Folk und freier Improvisation verbindet. In seiner Musik verschmelzen Mehrstimmigkeit, Groove und melancholischer Melodik zu einer eigenständigen musikalischen Sprache – stets auf der Suche nach emotionaler Tiefe und künstlerischer Integrität.</p>
 
-    <p>Nach einer klassischen Klavierausbildung am Konservatorium Arturo Soria in Madrid studierte er Komposition (B. Mus.) und Musiktheorie (M. Mus.) an der Hochschule für Musik und Theater Hamburg – gefolgt von einem zweiten Master (Dr. Langner Master) in Jazz Performance &amp; Production, in dem er seine Rollen als Pianist und Improvisator vertiefte. Er ist aktiv in Hamburgs Musikszene – von popnahen Projekten mit FiNDiNG CLEO und seinem Folkduo Zamorano&amp;Stamer bis hin zu avantgardistischer Improvisation im Jazzquartett WARMBLUETIG oder im SPIIC-Ensemble unter der Leitung von Vlatko Kucan. Außerdem arbeitet er regelmäßig mit Künstler:innen wie Asya Fateyeva, Barry Guy oder Moritz Baumgärtner zusammen. 2023 gründete er das ECOllective Ensemble, seit 2024 ist er Mitinitiator des experimentellen Labels Mental Pocus Records.</p>
+    <p data-i18n="vita.p2">Nach einer klassischen Klavierausbildung am Konservatorium Arturo Soria in Madrid studierte er Komposition (B. Mus.) und Musiktheorie (M. Mus.) an der Hochschule für Musik und Theater Hamburg – gefolgt von einem zweiten Master (Dr. Langner Master) in Jazz Performance &amp; Production, in dem er seine Rollen als Pianist und Improvisator vertiefte. Er ist aktiv in Hamburgs Musikszene – von popnahen Projekten mit FiNDiNG CLEO und seinem Folkduo Zamorano&amp;Stamer bis hin zu avantgardistischer Improvisation im Jazzquartett WARMBLUETIG oder im SPIIC-Ensemble unter der Leitung von Vlatko Kucan. Außerdem arbeitet er regelmäßig mit Künstler:innen wie Asya Fateyeva, Barry Guy oder Moritz Baumgärtner zusammen. 2023 gründete er das ECOllective Ensemble, seit 2024 ist er Mitinitiator des experimentellen Labels Mental Pocus Records.</p>
 
-    <p>Zamoranos Musik wurde auf Festivals wie Elbjazz, FOLKBaltica, dem Bachfest Hamburg und dem Festival für Alte Musik Köln präsentiert. Seine Auszeichnungen umfassen u. a. den Preis beim Kompositionswettbewerb der Oper Leipzig (2019), die Teilnahme am Genre‑Fluid Composers Lab (New Amsterdam, NY, 2020) und den DAAD-Preis für internationale Studierende (2021). In der Spielzeit 2025/26 arbeitet er erstmals mit dem Deutschen SchauSpielHaus Hamburg – für die Produktion <em>Vampire's Mountain</em> von Philippe Quesne.</p>
+    <p data-i18n="vita.p3">Zamoranos Musik wurde auf Festivals wie Elbjazz, FOLKBaltica, dem Bachfest Hamburg und dem Festival für Alte Musik Köln präsentiert. Seine Auszeichnungen umfassen u. a. den Preis beim Kompositionswettbewerb der Oper Leipzig (2019), die Teilnahme am Genre‑Fluid Composers Lab (New Amsterdam, NY, 2020) und den DAAD-Preis für internationale Studierende (2021). In der Spielzeit 2025/26 arbeitet er erstmals mit dem Deutschen SchauSpielHaus Hamburg – für die Produktion <em>Vampire's Mountain</em> von Philippe Quesne.</p>
 
-    <p>Seit 2021 lehrt er Musiktheorie an der Hochschule für Musik Lübeck, seit 2023 unterrichtet er Klavier für Popularmusik an der Staatlichen Jugendmusikschule Hamburg. Seine pädagogische Arbeit verknüpft europäische Klassik und Jazztradition mit aktuellen Strömungen – mit dem Ziel, eine fundierte musikalische Zukunft zu gestalten, ohne die Vergangenheit zu ignorieren.</p>
+    <p data-i18n="vita.p4">Seit 2021 lehrt er Musiktheorie an der Hochschule für Musik Lübeck, seit 2023 unterrichtet er Klavier für Popularmusik an der Staatlichen Jugendmusikschule Hamburg. Seine pädagogische Arbeit verknüpft europäische Klassik und Jazztradition mit aktuellen Strömungen – mit dem Ziel, eine fundierte musikalische Zukunft zu gestalten, ohne die Vergangenheit zu ignorieren.</p>
 
     <div style="clear:both"></div>
 
@@ -76,15 +76,15 @@
       <a href="assets/images/IMG_3769.jpg"><img src="assets/images/IMG_3769.jpg" alt="Foto: Lukas Palatinus" /></a>
     </div>
 
-    <h2>Current Curriculum + Press Kit</h2>
+    <h2 data-i18n="vita.presskit.h2">Current Curriculum + Press Kit</h2>
     <div class="file-links">
-      <a href="https://www.martinzamorano.com/system/files/30213/original/VITA_(DEU)_25_short_and_long.pdf" target="_blank">VITA (DEU) 2025 — Kurz- und Langfassung (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/30214/original/VITA_(ENG)_25_short_and_long.pdf" target="_blank">VITA (ENG) 2025 — Short and Long (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/30215/original/VITA_(ESP)_25_short_and_long.pdf" target="_blank">VITA (ESP) 2025 — Corta y Larga (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/25417/original/K%C3%BCnstlerfoto_1_(3).JPG" target="_blank">Foto Zamorano 1 (Credit: Alan Finlay)</a>
-      <a href="https://www.martinzamorano.com/system/files/25418/original/Martin_sel_-_9_of_21.jpg" target="_blank">Foto Zamorano 2 (Credit: Alan Finlay)</a>
-      <a href="https://www.martinzamorano.com/system/files/25420/original/Martin_sel_-_10_of_21_(niedrieger_aufl%C3%B6sung).png" target="_blank">Foto Zamorano 4 (Credit: Alan Finlay)</a>
-      <a href="https://www.martinzamorano.com/system/files/27022/original/IMG_3796.jpg" target="_blank">Foto Zamorano 5 (Credit: Lukas Palatinus)</a>
+      <a href="https://www.martinzamorano.com/system/files/30213/original/VITA_(DEU)_25_short_and_long.pdf" target="_blank" data-i18n="vita.pdf.deu">VITA (DEU) 2025 — Kurz- und Langfassung (PDF)</a>
+      <a href="https://www.martinzamorano.com/system/files/30214/original/VITA_(ENG)_25_short_and_long.pdf" target="_blank" data-i18n="vita.pdf.eng">VITA (ENG) 2025 — Short and Long (PDF)</a>
+      <a href="https://www.martinzamorano.com/system/files/30215/original/VITA_(ESP)_25_short_and_long.pdf" target="_blank" data-i18n="vita.pdf.esp">VITA (ESP) 2025 — Corta y Larga (PDF)</a>
+      <a href="https://www.martinzamorano.com/system/files/25417/original/K%C3%BCnstlerfoto_1_(3).JPG" target="_blank" data-i18n="vita.photo1">Foto Zamorano 1 (Credit: Alan Finlay)</a>
+      <a href="https://www.martinzamorano.com/system/files/25418/original/Martin_sel_-_9_of_21.jpg" target="_blank" data-i18n="vita.photo2">Foto Zamorano 2 (Credit: Alan Finlay)</a>
+      <a href="https://www.martinzamorano.com/system/files/25420/original/Martin_sel_-_10_of_21_(niedrieger_aufl%C3%B6sung).png" target="_blank" data-i18n="vita.photo3">Foto Zamorano 4 (Credit: Alan Finlay)</a>
+      <a href="https://www.martinzamorano.com/system/files/27022/original/IMG_3796.jpg" target="_blank" data-i18n="vita.photo4">Foto Zamorano 5 (Credit: Lukas Palatinus)</a>
     </div>
   </main>
 
@@ -93,8 +93,11 @@
       <a href="impressum.html">Impressum</a>
       <a href="datenschutz.html">Datenschutz</a>
     </nav>
-    <p class="footer-copy">&copy; 2025 Martín Zamorano</p>
+    <p class="footer-copy" data-i18n="site.footer.copy">&copy; 2025 Martín Zamorano</p>
   </footer>
+  <script src="assets/i18n/de.js"></script>
+  <script src="assets/i18n/en.js"></script>
+  <script src="assets/i18n/es.js"></script>
   <script src="assets/nav.js"></script>
 </body>
 </html>
