--- a/zamoranoandstamer.html
+++ b/zamoranoandstamer.html
@@ -22,21 +22,21 @@
   <header>
     <div class="site-title">
       <a href="index.html">Martín Zamorano</a>
-      <span class="subtitle">KOMPONIST &amp; PIANIST</span>
+      <span class="subtitle" data-i18n="site.subtitle">KOMPONIST &amp; PIANIST</span>
     </div>
     <nav class="main-nav">
       <ul>
-        <li><a href="vita.html">VITA</a></li>
-        <li><a href="musik.html">PIANO</a></li>
-        <li><a href="improvisation.html">IMPROVISATION</a></li>
-        <li><a href="healing.html">The Healing Project</a></li>
-        <li><a href="zamoranoandstamer.html">Zamorano&amp;Stamer</a></li>
-        <li><a href="musiktheorie.html">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
-        <li><a href="transcriptions.html">Jazz Transcriptions</a></li>
-        <li><a href="mental-pocus-records.html">Mental Pocus Records</a></li>
-        <li><a href="labyrinth.html">Help me get to the Show</a></li>
-        <li><a href="slap.html">Slap-O-Mat</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="vita.html" data-i18n="nav.vita">VITA</a></li>
+        <li><a href="musik.html" data-i18n="nav.piano">PIANO</a></li>
+        <li><a href="improvisation.html" data-i18n="nav.improvisation">IMPROVISATION</a></li>
+        <li><a href="healing.html" data-i18n="nav.healing">The Healing Project</a></li>
+        <li><a href="zamoranoandstamer.html" data-i18n="nav.zamorano">Zamorano&amp;Stamer</a></li>
+        <li><a href="musiktheorie.html" data-i18n="nav.musiktheorie">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
+        <li><a href="transcriptions.html" data-i18n="nav.transcriptions">Jazz Transcriptions</a></li>
+        <li><a href="mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
+        <li><a href="labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
+        <li><a href="slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
+        <li><a href="kontakt.html" data-i18n="nav.kontakt">Kontakt</a></li>
       </ul>
     </nav>
     <div class="lang-switcher">
@@ -47,15 +47,15 @@
   </header>
 
   <main class="page-content">
-    <p>Eine langjährige Freundschaft und eine tiefe Liebe zur Folkmusik vereint die beiden jungen Musiker aus Hamburg, die sich im Duo zusammengefunden haben, um die Begegnung zwischen nordischer Folkmusik und Jazz auszuloten.</p>
-    <p>In ihren Arrangements von Tunes aus Skandinavien und dem Keltischen Raum verbinden sie improvisatorische Elemente und harmonische Feinheiten mit dem melodischen Reichtum und der Ausdruckskraft der traditionellen Musik.</p>
-    <p>Finn Stamers Expressivität und spielerische Virtuosität auf der Geige gestalten die melodische Sprache, während Martín Zamorano das Fundament mit seinem polyphonen Ansatz und groove-orientiertem, perkussivem Sound legt. Die Vielseitigkeit des Duos zeigt sich durch die vielfältige Instrumentation, wie Hardangerfiedel, Oktavgeige, präpariertes Klavier und Fender Rhodes. In ihren Eigenkompositionen kristallisiert sich diese Versatilität heraus, die von introspektiven und meditativen Momenten bis hin zu Ausbrüchen ekstatischer und affirmativer Vitalität reicht.</p>
+    <p data-i18n="zas.p1">Eine langjährige Freundschaft und eine tiefe Liebe zur Folkmusik vereint die beiden jungen Musiker aus Hamburg, die sich im Duo zusammengefunden haben, um die Begegnung zwischen nordischer Folkmusik und Jazz auszuloten.</p>
+    <p data-i18n="zas.p2">In ihren Arrangements von Tunes aus Skandinavien und dem Keltischen Raum verbinden sie improvisatorische Elemente und harmonische Feinheiten mit dem melodischen Reichtum und der Ausdruckskraft der traditionellen Musik.</p>
+    <p data-i18n="zas.p3">Finn Stamers Expressivität und spielerische Virtuosität auf der Geige gestalten die melodische Sprache, während Martín Zamorano das Fundament mit seinem polyphonen Ansatz und groove-orientiertem, perkussivem Sound legt. Die Vielseitigkeit des Duos zeigt sich durch die vielfältige Instrumentation, wie Hardangerfiedel, Oktavgeige, präpariertes Klavier und Fender Rhodes. In ihren Eigenkompositionen kristallisiert sich diese Versatilität heraus, die von introspektiven und meditativen Momenten bis hin zu Ausbrüchen ekstatischer und affirmativer Vitalität reicht.</p>
 
     <img src="assets/images/FIN_0295.jpg" alt="Zamorano &amp; Stamer — Foto: Nils Jöhnk" style="margin: 2rem 0; border: 1px solid #2a2a2a;" />
 
     <div class="file-links">
-      <a href="https://www.martinzamorano.com/system/files/28765/original/Zamorano_Stamer_DEUTSCH_Presskit.pdf" target="_blank">DEUTSCH Press Kit Zamorano&amp;Stamer (PDF)</a>
-      <a href="https://www.martinzamorano.com/system/files/28766/original/Zamorano_Stamer_ENGLISH_Press_kit.pdf" target="_blank">ENGLISH Press Kit Zamorano&amp;Stamer (PDF)</a>
+      <a href="https://www.martinzamorano.com/system/files/28765/original/Zamorano_Stamer_DEUTSCH_Presskit.pdf" target="_blank" data-i18n="zas.pdf.de">DEUTSCH Press Kit Zamorano&amp;Stamer (PDF)</a>
+      <a href="https://www.martinzamorano.com/system/files/28766/original/Zamorano_Stamer_ENGLISH_Press_kit.pdf" target="_blank" data-i18n="zas.pdf.en">ENGLISH Press Kit Zamorano&amp;Stamer (PDF)</a>
     </div>
   </main>
 
@@ -64,8 +64,11 @@
       <a href="impressum.html">Impressum</a>
       <a href="datenschutz.html">Datenschutz</a>
     </nav>
-    <p class="footer-copy">&copy; 2025 Martín Zamorano</p>
+    <p class="footer-copy" data-i18n="site.footer.copy">&copy; 2025 Martín Zamorano</p>
   </footer>
+  <script src="assets/i18n/de.js"></script>
+  <script src="assets/i18n/en.js"></script>
+  <script src="assets/i18n/es.js"></script>
   <script src="assets/nav.js"></script>
 </body>
 </html>
