--- a/kontakt.html
+++ b/kontakt.html
@@ -39,7 +39,7 @@
   <div id="bodyguardOverlay" class="bodyguard-overlay">
     <div class="bodyguard-container">
       <div id="bodyguardBanner" class="bodyguard-banner">
-        <h2 data-i18n="bodyguard.title">You must defeat the bodyguards to speak to Martin!</h2>
+        <h2 data-i18n="bodyguard.h2">You must defeat the bodyguards to speak to Martin!</h2>
       </div>
 
       <div class="bodyguards">
@@ -52,7 +52,7 @@
       </div>
 
       <div id="victoryBanner" class="victory-banner hidden">
-        <h2 data-i18n="bodyguard.victory">You may now speak to Martin!</h2>
+        <h2 data-i18n="bodyguard.victory">You may now speak to Martin.</h2>
       </div>
     </div>
   </div>
