fix language toggles

--- a/en/index.html
+++ b/en/index.html
@@ -35,8 +35,8 @@
         <li><a href="../musiktheorie.html" data-i18n="nav.musiktheorie">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
         <li><a href="../transcriptions.html" data-i18n="nav.transcriptions">Jazz Transcriptions</a></li>
         <li><a href="../mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
-        <li><a href="../labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
-        <li><a href="../slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
+        <li data-nav-mode="fun"><a href="../labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
+        <li data-nav-mode="fun"><a href="../slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
         <li><a href="../kontakt.html" data-i18n="nav.kontakt">Kontakt</a></li>
       </ul>
     </nav>
