--- a/transcriptions.html
+++ b/transcriptions.html
@@ -10,21 +10,21 @@
   <header>
     <div class="site-title">
       <a href="index.html">Martín Zamorano</a>
-      <span class="subtitle">KOMPONIST &amp; PIANIST</span>
+      <span class="subtitle" data-i18n="site.subtitle">KOMPONIST &amp; PIANIST</span>
     </div>
     <nav class="main-nav">
       <ul>
-        <li><a href="vita.html">VITA</a></li>
-        <li><a href="musik.html">PIANO</a></li>
-        <li><a href="improvisation.html">IMPROVISATION</a></li>
-        <li><a href="healing.html">The Healing Project</a></li>
-        <li><a href="zamoranoandstamer.html">Zamorano&amp;Stamer</a></li>
-        <li><a href="musiktheorie.html">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
-        <li><a href="transcriptions.html">Jazz Transcriptions</a></li>
-        <li><a href="mental-pocus-records.html">Mental Pocus Records</a></li>
-        <li><a href="labyrinth.html">Help me get to the Show</a></li>
-        <li><a href="slap.html">Slap-O-Mat</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="vita.html" data-i18n="nav.vita">VITA</a></li>
+        <li><a href="musik.html" data-i18n="nav.piano">PIANO</a></li>
+        <li><a href="improvisation.html" data-i18n="nav.improvisation">IMPROVISATION</a></li>
+        <li><a href="healing.html" data-i18n="nav.healing">The Healing Project</a></li>
+        <li><a href="zamoranoandstamer.html" data-i18n="nav.zamorano">Zamorano&amp;Stamer</a></li>
+        <li><a href="musiktheorie.html" data-i18n="nav.musiktheorie">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
+        <li><a href="transcriptions.html" data-i18n="nav.transcriptions">Jazz Transcriptions</a></li>
+        <li><a href="mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
+        <li data-nav-mode="fun"><a href="labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
+        <li data-nav-mode="fun"><a href="slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
+        <li><a href="kontakt.html" data-i18n="nav.kontakt">Kontakt</a></li>
       </ul>
     </nav>
     <div class="lang-switcher">
@@ -53,6 +53,9 @@
     </nav>
     <p class="footer-copy">&copy; 2025 Martín Zamorano</p>
   </footer>
+  <script src="assets/i18n/de.js"></script>
+  <script src="assets/i18n/en.js"></script>
+  <script src="assets/i18n/es.js"></script>
   <script src="assets/nav.js"></script>
 </body>
 </html>
