refactored top bar

--- a/en/improvisation.html
+++ b/en/improvisation.html
@@ -19,32 +19,7 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="site-title">
-      <a href="../index.html">Martín Zamorano</a>
-      <span class="subtitle" data-i18n="site.subtitle">COMPOSER &amp; PIANIST</span>
-    </div>
-    <nav class="main-nav">
-      <ul>
-        <li><a href="vita.html" data-i18n="nav.vita">BIOGRAPHY</a></li>
-        <li><a href="../musik.html" data-i18n="nav.piano">PIANO</a></li>
-        <li><a href="improvisation.html" data-i18n="nav.improvisation">IMPROVISATION</a></li>
-        <li><a href="healing.html" data-i18n="nav.healing">The Healing Project</a></li>
-        <li><a href="../zamoranoandstamer.html" data-i18n="nav.zamorano">Zamorano&amp;Stamer</a></li>
-        <li><a href="../musiktheorie.html" data-i18n="nav.musiktheorie">COUNTERPOINT &amp; MUSIC THEORY</a></li>
-        <li><a href="../transcriptions.html" data-i18n="nav.transcriptions">Jazz Transcriptions</a></li>
-        <li><a href="../mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
-        <li data-nav-mode="fun"><a href="../labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
-        <li data-nav-mode="fun"><a href="../slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
-        <li><a href="../kontakt.html" data-i18n="nav.kontakt">Contact</a></li>
-      </ul>
-    </nav>
-    <div class="lang-switcher">
-      <a data-lang="de">DE</a>
-      <a data-lang="en">EN</a>
-      <a data-lang="es">ES</a>
-    </div>
-  </header>
+  <header></header>
 
   <main class="page-content">
     <h2>Mad World</h2>
