--- a/es/healing.html
+++ b/es/healing.html
@@ -19,32 +19,7 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="site-title">
-      <a href="../index.html">Martín Zamorano</a>
-      <span class="subtitle" data-i18n="site.subtitle">COMPOSITOR Y PIANISTA</span>
-    </div>
-    <nav class="main-nav">
-      <ul>
-        <li><a href="vita.html" data-i18n="nav.vita">BIOGRAFÍA</a></li>
-        <li><a href="../musik.html" data-i18n="nav.piano">PIANO</a></li>
-        <li><a href="improvisation.html" data-i18n="nav.improvisation">IMPROVISACIÓN</a></li>
-        <li><a href="healing.html" data-i18n="nav.healing">The Healing Project</a></li>
-        <li><a href="../zamoranoandstamer.html" data-i18n="nav.zamorano">Zamorano&amp;Stamer</a></li>
-        <li><a href="../musiktheorie.html" data-i18n="nav.musiktheorie">CONTRAPUNTO Y TEORÍA MUSICAL</a></li>
-        <li><a href="../transcriptions.html" data-i18n="nav.transcriptions">Transcripciones de Jazz</a></li>
-        <li><a href="../mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
-        <li data-nav-mode="fun"><a href="../labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
-        <li data-nav-mode="fun"><a href="../slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
-        <li><a href="../kontakt.html" data-i18n="nav.kontakt">Contacto</a></li>
-      </ul>
-    </nav>
-    <div class="lang-switcher">
-      <a data-lang="de">DE</a>
-      <a data-lang="en">EN</a>
-      <a data-lang="es">ES</a>
-    </div>
-  </header>
+  <header></header>
 
   <main class="page-content">
     <p>Estas cinco imágenes son el componente visual de la obra de arte interdisciplinaria "Five Stages of Healing" sobre el proceso de sanación emocional. El punto de partida es el final de una relación amorosa y la exploración de las cinco etapas del duelo, basadas en el modelo de Elisabeth Kübler-Ross, que he adaptado al proceso del desamor. A través del análisis de mis propios pensamientos y emociones durante este período, surgió un diálogo artístico interno que combina poesía, pintura y música. Las cinco imágenes que han resultado de este proceso sirven como inspiración para la improvisación musical, reflejando la naturaleza caótica y cíclica del proceso de recuperación emocional y a su vez delimitando las facetas esenciales de cada fase del proceso. Invitan tanto a los músicos participantes como al público a reflexionar sobre sus propias experiencias de pérdida y aceptación.</p>
