--- a/healing.html
+++ b/healing.html
@@ -19,32 +19,7 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="site-title">
-      <a href="index.html">Martín Zamorano</a>
-      <span class="subtitle" data-i18n="site.subtitle">KOMPONIST &amp; PIANIST</span>
-    </div>
-    <nav class="main-nav">
-      <ul>
-        <li><a href="vita.html" data-i18n="nav.vita">VITA</a></li>
-        <li><a href="musik.html" data-i18n="nav.piano">PIANO</a></li>
-        <li><a href="improvisation.html" data-i18n="nav.improvisation">IMPROVISATION</a></li>
-        <li><a href="healing.html" data-i18n="nav.healing">The Healing Project</a></li>
-        <li><a href="zamoranoandstamer.html" data-i18n="nav.zamorano">Zamorano&amp;Stamer</a></li>
-        <li><a href="musiktheorie.html" data-i18n="nav.musiktheorie">KONTRAPUNKT &amp; MUSIKTHEORIE</a></li>
-        <li><a href="transcriptions.html" data-i18n="nav.transcriptions">Jazz Transcriptions</a></li>
-        <li data-nav-mode="fun"><a href="labyrinth.html" data-i18n="nav.labyrinth">Help me get to the Show</a></li>
-        <li data-nav-mode="fun"><a href="slap.html" data-i18n="nav.slap">Slap-O-Mat</a></li>
-        <li><a href="mental-pocus-records.html" data-i18n="nav.mpr">Mental Pocus Records</a></li>
-        <li><a href="kontakt.html" data-i18n="nav.kontakt">Kontakt</a></li>
-      </ul>
-    </nav>
-    <div class="lang-switcher">
-      <a data-lang="de">DE</a>
-      <a data-lang="en">EN</a>
-      <a data-lang="es">ES</a>
-    </div>
-  </header>
+  <header></header>
 
   <main class="page-content">
     <p data-i18n="healing.intro">Diese fünf Bilder sind der grafische Teil des interdisziplinären Kunstwerks „Five Stages of Healing" zum Thema „Emotionales Heilen". Ausgangspunkt ist die Auseinandersetzung mit den fünf Phasen der Trauer nach dem Modell von Elisabeth Kübler-Ross und die künstlerische Übertragung dieser psychologischen Theorie auf den Prozess des Liebeskummers. Daraus entsteht ein innerer künstlerischer Dialog, der Dichtung, Malerei und Musik miteinander verbindet. Die fünf Bilder, die aus dem emotionalen Prozess hervorgehen und als emotionales Material für die musikalische Improvisation dienen, spiegeln die chaotische und zyklische Natur des Heilens wider und schildern zugleich die wesentlichen Aspekte jeder Phase des Prozesses. Sie laden sowohl die mitwirkenden Musiker:innen als auch das Publikum dazu ein, eigene Erfahrungen von Verlust und Akzeptanz zu reflektieren.</p>
