--- a/labyrinth.html
+++ b/labyrinth.html
@@ -9,7 +9,7 @@
 <body>
     <div class="game-container">
         <div class="header">
-            <h1>Bring Martin to the Show</h1>
+            <h1>Bring Light to the Show</h1>
             <p>Use arrow keys to navigate him through the maze!</p>
             <a href="index.html" class="back-button">← Back to Home</a>
         </div>
@@ -67,7 +67,7 @@
             <h3>How to Play:</h3>
             <ul>
                 <li>Use <kbd>↑</kbd> <kbd>↓</kbd> <kbd>←</kbd> <kbd>→</kbd> arrow keys to move</li>
-                <li>Navigate through the maze to reach the 🎹 piano</li>
+                <li>Navigate through the maze to reach the piano</li>
                 <li>Avoid walls</li>
                 <li>Each level gets progressively harder</li>
             </ul>
