--- a/shows.html
+++ b/shows.html
@@ -15,7 +15,8 @@
       content: ''; position: fixed; inset: 0;
       background: rgba(11,11,11,.88); z-index: 0; pointer-events: none;
     }
-    header, main.page-content, footer { position: relative; z-index: 1; }
+    header { position: relative; z-index: 100; }
+    main.page-content, footer { position: relative; z-index: 1; }
   </style>
 </head>
 <body>
@@ -28,77 +29,43 @@
     <table class="shows-table">
       <tbody>
         <tr>
-          <td class="show-date">15. März 2026</td>
-          <td class="show-venue">Elbphilharmonie — Kleiner Saal</td>
-          <td class="show-city">Hamburg</td>
-          <td class="show-project">Zamorano&amp;Stamer</td>
-        </tr>
-        <tr>
-          <td class="show-date">28. März 2026</td>
+          <td class="show-date">20.02.2026</td>
           <td class="show-venue">Kampnagel</td>
           <td class="show-city">Hamburg</td>
-          <td class="show-project">WARMBLUETIG Quartet</td>
+          <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
         </tr>
         <tr>
-          <td class="show-date">4. April 2026</td>
-          <td class="show-venue">Deutsches SchauSpielHaus</td>
-          <td class="show-city">Hamburg</td>
-          <td class="show-project">Vampire's Mountain (Philippe Quesne)</td>
-        </tr>
-        <tr>
-          <td class="show-date">11. April 2026</td>
-          <td class="show-venue">Jazzclub Unterfahrt</td>
-          <td class="show-city">München</td>
-          <td class="show-project">Solo Piano</td>
-        </tr>
-        <tr>
-          <td class="show-date">25. April 2026</td>
-          <td class="show-venue">FOLKBaltica Festival</td>
-          <td class="show-city">Flensburg</td>
-          <td class="show-project">Zamorano&amp;Stamer</td>
-        </tr>
-        <tr>
-          <td class="show-date">9. Mai 2026</td>
-          <td class="show-venue">Laeiszhalle — Studio E</td>
-          <td class="show-city">Hamburg</td>
-          <td class="show-project">ECOllective Ensemble</td>
-        </tr>
-        <tr>
-          <td class="show-date">22. Mai 2026</td>
-          <td class="show-venue">A-Trane</td>
-          <td class="show-city">Berlin</td>
-          <td class="show-project">SPIIC Ensemble (Vlatko Kucan)</td>
-        </tr>
-        <tr>
-          <td class="show-date">6. Juni 2026</td>
-          <td class="show-venue">Elbjazz Festival</td>
-          <td class="show-city">Hamburg</td>
-          <td class="show-project">WARMBLUETIG Quartet</td>
-        </tr>
+            <td class="show-date">21.02.2026</td>
+            <td class="show-venue">Kampnagel</td>
+            <td class="show-city">Hamburg</td>
+            <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
+          </tr>
+          <tr>
+            <td class="show-date">22.02.2026</td>
+            <td class="show-venue">Kampnagel</td>
+            <td class="show-city">Hamburg</td>
+            <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
+          </tr>
+          <tr>
+            <td class="show-date">09.05.2026</td>
+            <td class="show-venue">Kampnagel</td>
+            <td class="show-city">Hamburg</td>
+            <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
+          </tr>
+          <tr>
+            <td class="show-date">10.05.2026</td>
+            <td class="show-venue">Kampnagel</td>
+            <td class="show-city">Hamburg</td>
+            <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
+          </tr>
+
       </tbody>
     </table>
 
     <h2>2025 — Archiv</h2>
     <table class="shows-table shows-table--past">
       <tbody>
-        <tr>
-          <td class="show-date">18. Okt. 2025</td>
-          <td class="show-venue">Hochschule für Musik Lübeck</td>
-          <td class="show-city">Lübeck</td>
-          <td class="show-project">Solo Piano — Lecture Recital</td>
-        </tr>
-        <tr>
-          <td class="show-date">3. Sept. 2025</td>
-          <td class="show-venue">Bachfest Hamburg</td>
-          <td class="show-city">Hamburg</td>
-          <td class="show-project">ECOllective Ensemble</td>
-        </tr>
-        <tr>
-          <td class="show-date">12. Juli 2025</td>
-          <td class="show-venue">Festival für Alte Musik Köln</td>
-          <td class="show-city">Köln</td>
-          <td class="show-project">Zamorano&amp;Stamer</td>
-        </tr>
+
       </tbody>
     </table>
   </main>
