--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Martín Zamorano</title>
   <meta name="description" content="Pianist, Komponist & Musikpädagoge — Hamburg" />
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=Inter:wght@400;500;700&display=swap" />
   <link rel="stylesheet" href="assets/style.css" />
   <style>
     body {
@@ -22,7 +26,8 @@
       z-index: 0;
       pointer-events: none;
     }
-    header, main.page-content, footer { position: relative; z-index: 1; }
+    header { position: relative; z-index: 100; }
+    main.page-content, footer { position: relative; z-index: 1; }
   </style>
 </head>
 <body>
