--- a/zamoranoandstamer.html
+++ b/zamoranoandstamer.html
@@ -15,7 +15,8 @@
       content: ''; position: fixed; inset: 0;
       background: rgba(11,11,11,.82); z-index: 0; pointer-events: none;
     }
-    header, main.page-content, footer { position: relative; z-index: 1; }
+    header { position: relative; z-index: 100; }
+    main.page-content, footer { position: relative; z-index: 1; }
   </style>
 </head>
 <body>
