links in show section

--- a/shows.html
+++ b/shows.html
@@ -30,34 +30,34 @@
       <tbody>
         <tr>
           <td class="show-date">20.02.2026</td>
-          <td class="show-venue">Kampnagel</td>
+          <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
           <td class="show-city">Hamburg</td>
           <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
         </tr>
         <tr>
-            <td class="show-date">21.02.2026</td>
-            <td class="show-venue">Kampnagel</td>
-            <td class="show-city">Hamburg</td>
-            <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
-          </tr>
-          <tr>
-            <td class="show-date">22.02.2026</td>
-            <td class="show-venue">Kampnagel</td>
-            <td class="show-city">Hamburg</td>
-            <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
-          </tr>
-          <tr>
-            <td class="show-date">09.05.2026</td>
-            <td class="show-venue">Kampnagel</td>
-            <td class="show-city">Hamburg</td>
-            <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
-          </tr>
-          <tr>
-            <td class="show-date">10.05.2026</td>
-            <td class="show-venue">Kampnagel</td>
-            <td class="show-city">Hamburg</td>
-            <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
-          </tr>
+          <td class="show-date">21.02.2026</td>
+          <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
+          <td class="show-city">Hamburg</td>
+          <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
+        </tr>
+        <tr>
+          <td class="show-date">22.02.2026</td>
+          <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
+          <td class="show-city">Hamburg</td>
+          <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
+        </tr>
+        <tr>
+          <td class="show-date">09.05.2026</td>
+          <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
+          <td class="show-city">Hamburg</td>
+          <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
+        </tr>
+        <tr>
+          <td class="show-date">10.05.2026</td>
+          <td class="show-venue"><a href="https://kampnagel.de/produktionen/kammerballett" target="_blank" rel="noopener">Kampnagel</a></td>
+          <td class="show-city">Hamburg</td>
+          <td class="show-project">RE:PUBLIC mit der Hamburger Kammerballett (with Danica Hobden, Dirk Achim Dhonau, Carmen Kleykens Vidal)</td>
+        </tr>
 
       </tbody>
     </table>
@@ -75,7 +75,7 @@
       <a href="impressum.html">Impressum</a>
       <a href="datenschutz.html">Datenschutz</a>
     </nav>
-    <p class="footer-copy" data-i18n="site.footer.copy">&copy; 2025 Martín Zamorano</p>
+    <p class="footer-copy" data-i18n="site.footer.copy">&copy; 2026 Martín Zamorano</p>
   </footer>
 
   <script src="assets/i18n/de.js"></script>
